--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <title>Youvote Admin</title>
+    <title>BinBuddy</title>
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="An Admin panel for youvote  voting App" />
 
