--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/splash.png" type="image/png" />
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/splash2.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/splash2.png" />
     <title>BinBuddy</title>
     <meta name="theme-color" content="#ffffff" />
     <meta name="description" content="An Admin panel for youvote  voting App" />
