--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="manifest.webmanifest" />
     <link rel="shortcut icon" href="/splash.png" type="image/png" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/splash2.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/splash2.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/splash2.png" />
     <title>BinBuddy</title>
     <meta name="theme-color" content="#ffffff" />
-    <meta name="description" content="An Admin panel for youvote  voting App" />
+    <meta name="description" content="A waste management application" />
 
     <meta name="viewport" content="width=device-width, user-scalable=no" />
 
