--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <link rel="shortcut icon" href="/splash.png" type="image/png" />
+    <link rel="shortcut icon" href="/splash2.png" type="image/png" />
     <link rel="apple-touch-icon" href="/splash2.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/splash2.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/splash2.png" />
